--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^7.0.1",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
+    "recharts": "^2.13.3",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
