--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.8",
+    "backend": "file:..",
     "chartjs": "^0.3.24",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
